[gd_scene load_steps=8 format=2]

[ext_resource path="res://ship_3.svg" type="Texture" id=1]
[ext_resource path="res://PlayerShip.gd" type="Script" id=2]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.29163, 20.5776 )

[sub_resource type="Curve" id=2]
min_value = 1.0
max_value = 12.0
bake_resolution = 88
_data = [ Vector2( 0.0428571, 1.28417 ), 0.0, 0.0, 0, 0, Vector2( 0.931429, 6.93282 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
min_value = -1.0
_data = [ Vector2( 0, -0.651869 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="PlayerShip" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 4
script = ExtResource( 2 )
bullet = ExtResource( 3 )
explosion = ExtResource( 4 )

[node name="ShipCollider" type="CollisionShape2D" parent="."]
position = Vector2( 2.65166, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShipExhaust" type="CPUParticles2D" parent="."]
amount = 29
randomness = 0.3
lifetime_randomness = 0.77
direction = Vector2( -1, 100 )
spread = 31.45
gravity = Vector2( -50, 0 )
scale_amount_curve = SubResource( 2 )
color = Color( 0.87451, 0.854902, 0.101961, 0.631373 )
hue_variation_curve = SubResource( 3 )

[node name="ShipSprite" type="Sprite" parent="."]
position = Vector2( 0.707107, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CoolDown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
[connection signal="timeout" from="CoolDown" to="." method="_on_cooldown_timeout"]
